web/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app.kubernetes.io/name: web
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: foxtown
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: web
      app.kubernetes.io/component: web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: web
        app.kubernetes.io/component: web
        app.kubernetes.io/part-of: foxtown
    spec:
      containers:
        - name: wordpress
          image: ghcr.io/cea-informatics/wordpress:1.10.20
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: uploads
              mountPath: /var/www/html/wp-content/uploads
          resources:
            requests:
              cpu: 50m
              memory: 500Mi
            limits:
              memory: 500Mi
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 15
            timeoutSeconds: 5
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: web-uploads-pvc
